--- a/sobrenos.html
+++ b/sobrenos.html
@@ -206,7 +206,7 @@
 								</div>
 								<div class="team-title-bx text-center">
 									<h2 class="team-title">Etiandro Silva</h2>
-									<span class="clearfix">Engenheiro</span>
+									<span class="clearfix">Engenheiro Civil</span>
 								</div>
 							</div>
 						</div><div class="col-lg-4 col-md-4 col-sm-4 m-b30 wow fadeIn" data-wow-duration="2s" data-wow-delay="0.6s">
