Refactor alter. team title

--- a/sobrenos.html
+++ b/sobrenos.html
@@ -184,7 +184,7 @@
 								</div>
 								<div class="team-title-bx text-center">
 									<h2 class="team-title">Josemar Antonio</h2>
-									<span class="clearfix">Gestor Comercial</span>
+									<span class="clearfix">Relações Públicas</span>
 								</div>
 							</div>
 						</div>
@@ -195,7 +195,7 @@
 								</div>
 								<div class="team-title-bx text-center">
 									<h2 class="team-title">Bruno Silva</h2>
-									<span class="clearfix">Fotógrafo</span>
+									<span class="clearfix">Relações Públicas</span>
 								</div>
 							</div>
 						</div>
