--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 	<meta name="keywords" content="" />
 	<meta name="author" content="" />
 	<meta name="robots" content="" />
-	<meta name="description" content="Archia - Architecture & Interior HTML Template" />
-	<meta property="og:title" content="Archia - Architecture & Interior HTML Template" />
-	<meta property="og:description" content="Archia - Architecture & Interior HTML Template" />
+	<meta name="description" content="Arte Digital" />
+	<meta property="og:title" content="Arte Digital" />
+	<meta property="og:description" content="Arte Digital" />
 	<meta property="og:image" content="" />
 	<meta name="format-detection" content="telephone=no">
 	
