refator alter. sobrenos

--- a/sobrenos.html
+++ b/sobrenos.html
@@ -170,57 +170,172 @@
 				</div>
 			</div>
 			<!-- Video Section END -->
+			<!--Nossa Equipa começo-->	
+			<div class="section-full bg-white content-inner-1" style="background-image:url(images/background/bg2.jpg); background-position:center; background-repeat:no-repeat; background-size: cover;">
+                <div class="container">
+					<div class="team-carousel owl-carousel owl-btn-center-lr">
+						<div class="item">
+							<div class="team-member">
+								<div class="team-media">
+									<img src="images/team/pic1.jpg" alt=""/>
+								</div>
+								<div class="team-info">
+									<h5 class="team-job-title">Parceiro</h5>
+									<h2 class="team-title">Idalecio Francisco Brás</h2>
+									<p>Here’s the story of a man named Brady who was busy with three boys of his own, climb leg rub face on everything give attitude nap all day for under the bed. </p>
+									<div class="team-perinfo">
+										<div class="team-sign">
+											<img src="images/sign.png" alt=""/>
+										</div>
+										<div class="team-profile">
+											<div class="name">
+												<h4>Engenheiro Informatico</h4>
+												<ul>
+													<li><a href="https://www.facebook.com/profile.php?id=100001996084061&mibextid=LQQJ4d"><i class="fa fa-facebook"></i></a></li>
+													<li><a href="https://www.instagram.com/idaleciobras?igsh=bjZsbWVyamkwYzJ0&utm_source=qr"><i class="fa fa-instagram"></i></a></li>
+												</ul>
+											</div>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="item">
+							<div class="team-member">
+								<div class="team-media">
+									<img src="images/team/pic7.jpg" alt=""/>
+								</div>
+								<div class="team-info">
+									<h5 class="team-job-title">Parceiro</h5>
+									<h2 class="team-title">João S. Dos Santos Caholo</h2>
+									<p>Here’s the story of a man named Brady who was busy with three boys of his own, climb leg rub face on everything give attitude nap all day for under the bed. </p>
+									<div class="team-perinfo">
+										<div class="team-sign">
+											<img src="images/Jc.png" alt=""/>
+										</div>
+										<div class="team-profile">
+											<div class="name">
+												<h4>Engenheiro Informatico</h4>
+												<ul>
+													<li><a href="javascript:void(0)"><i class="fa fa-facebook"></i></a></li>
+													<li><a href="javascript:void(0)"><i class="fa fa-instagram"></i></a></li>
+												</ul>
+											</div>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="item">
+							<div class="team-member">
+								<div class="team-media">
+									<img src="images/team/pic7.jpg" alt=""/>
+								</div>
+								<div class="team-info">
+									<h5 class="team-job-title">Parceiro</h5>
+									<h2 class="team-title">Josemar Antonio</h2>
+									<p>Here’s the story of a man named Brady who was busy with three boys of his own, climb leg rub face on everything give attitude nap all day for under the bed. </p>
+									<div class="team-perinfo">
+										<div class="team-sign">
+											<img src="images/Ja.png" alt=""/>
+										</div>
+										<div class="team-profile">
+											<div class="name">
+												<h4>Arquiteto</h4>
+												<ul>
+													<li><a href="https://www.facebook.com/profile.php?id=100001996084061&mibextid=LQQJ4d"><i class="fa fa-facebook"></i></a></li>
+													<li><a href="https://www.instagram.com/idaleciobras?igsh=bjZsbWVyamkwYzJ0&utm_source=qr"><i class="fa fa-instagram"></i></a></li>
+												</ul>
+											</div>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="item">
+							<div class="team-member">
+								<div class="team-media">
+									<img src="images/team/pic5.jpg" alt=""/>
+								</div>
+								<div class="team-info">
+									<h5 class="team-job-title">Parceiro</h5>
+									<h2 class="team-title">Bruno Silva</h2>
+									<p>Here’s the story of a man named Brady who was busy with three boys of his own, climb leg rub face on everything give attitude nap all day for under the bed. </p>
+									<div class="team-perinfo">
+										<div class="team-sign">
+											<img src="images/Bs.png" alt=""/>
+										</div>
+										<div class="team-profile">
+											<div class="name">
+												<h4>Economista</h4>
+												<ul>
+													<li><a href="https://www.facebook.com/profile.php?id=100001996084061&mibextid=LQQJ4d"><i class="fa fa-facebook"></i></a></li>
+													<li><a href="https://www.instagram.com/idaleciobras?igsh=bjZsbWVyamkwYzJ0&utm_source=qr"><i class="fa fa-instagram"></i></a></li>
+												</ul>
+											</div>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="item">
+							<div class="team-member">
+								<div class="team-media">
+									<img src="images/team/pic3.jpg" alt=""/>
+								</div>
+								<div class="team-info">
+									<h5 class="team-job-title">Parceiro</h5>
+									<h2 class="team-title">Etiandro Silva</h2>
+									<p>Here’s the story of a man named Brady who was busy with three boys of his own, climb leg rub face on everything give attitude nap all day for under the bed. </p>
+									<div class="team-perinfo">
+										<div class="team-sign">
+											<img src="images/Es.png" alt=""/>
+										</div>
+										<div class="team-profile">
+											<div class="name">
+												<h4>Engenheiro Civil</h4>
+												<ul>
+													<li><a href="https://www.facebook.com/profile.php?id=100001996084061&mibextid=LQQJ4d"><i class="fa fa-facebook"></i></a></li>
+													<li><a href="https://www.instagram.com/idaleciobras?igsh=bjZsbWVyamkwYzJ0&utm_source=qr"><i class="fa fa-instagram"></i></a></li>
+												</ul>
+											</div>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="item">
+							<div class="team-member">
+								<div class="team-media">
+									<img src="images/team/pic4.jpg" alt=""/>
+								</div>
+								<div class="team-info">
+									<h5 class="team-job-title">Parceiro</h5>
+									<h2 class="team-title">Gildo Rogério</h2>
+									<p>Here’s the story of a man named Brady who was busy with three boys of his own, climb leg rub face on everything give attitude nap all day for under the bed. </p>
+									<div class="team-perinfo">
+										<div class="team-sign">
+											<img src="images/Gr.png" alt=""/>
+										</div>
+										<div class="team-profile">
+											<div class="name">
+												<h4>Engenheiro Informatico</h4>
+												<ul>
+													<li><a href="https://www.facebook.com/profile.php?id=100001996084061&mibextid=LQQJ4d"><i class="fa fa-facebook"></i></a></li>
+													<li><a href="https://www.instagram.com/idaleciobras?igsh=bjZsbWVyamkwYzJ0&utm_source=qr"><i class="fa fa-instagram"></i></a></li>
+												</ul>
+											</div>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>	
+			</div>	
 			<!-- Our Team -->
 			<div class="section-full bg-white content-inner-1 ">
 				<div class="container">
-					<div class="section-head text-center">
-						<h2 class="head-title m-b10">Nossa Equipa</h2>
-					</div>
-					<div class="row">
-						<div class="col-lg-4 col-md-4 col-sm-4 m-b30 wow fadeIn" data-wow-duration="2s" data-wow-delay="0.2s">
-							<div class="our-team">
-								<div class="dlab-media radius-sm">
-									<img src="images/team/our-team/pic1.jpg" alt="">
-								</div>
-								<div class="team-title-bx text-center">
-									<h2 class="team-title">Josemar Antonio</h2>
-									<span class="clearfix">Relações Públicas</span>
-								</div>
-							</div>
-						</div>
-						<div class="col-lg-4 col-md-4 col-sm-4 m-b30 wow fadeIn" data-wow-duration="2s" data-wow-delay="0.4s">
-							<div class="our-team">
-								<div class="dlab-media radius-sm">
-									<img src="images/team/our-team/pic2.jpg" alt="">
-								</div>
-								<div class="team-title-bx text-center">
-									<h2 class="team-title">Bruno Silva</h2>
-									<span class="clearfix">Relações Públicas</span>
-								</div>
-							</div>
-						</div>
-						<div class="col-lg-4 col-md-4 col-sm-4 m-b30 wow fadeIn" data-wow-duration="2s" data-wow-delay="0.6s">
-							<div class="our-team">
-								<div class="dlab-media radius-sm">
-									<img src="images/team/our-team/pic3.jpg" alt="">
-								</div>
-								<div class="team-title-bx text-center">
-									<h2 class="team-title">Etiandro Silva</h2>
-									<span class="clearfix">Engenheiro Civil</span>
-								</div>
-							</div>
-						</div><div class="col-lg-4 col-md-4 col-sm-4 m-b30 wow fadeIn" data-wow-duration="2s" data-wow-delay="0.6s">
-							<div class="our-team">
-								<div class="dlab-media radius-sm">
-									<img src="images/team/our-team/pic4.jpg" alt="">
-								</div>
-								<div class="team-title-bx text-center">
-									<h2 class="team-title">Gildo dos Santos</h2>
-									<span class="clearfix">Gestor Comercial</span>
-								</div>
-							</div>
-						</div>
-					</div>
 				</div>
 			</div>
 			<!-- Our Team END -->
