--- a/sobrenos.html
+++ b/sobrenos.html
@@ -181,7 +181,7 @@
 								</div>
 								<div class="team-info">
 									<h5 class="team-job-title">Parceiro</h5>
-									<h2 class="team-title">Idalecio Francisco Brás</h2>
+									<h2 class="team-title">Idalecio Brás</h2>
 									<p>Here’s the story of a man named Brady who was busy with three boys of his own, climb leg rub face on everything give attitude nap all day for under the bed. </p>
 									<div class="team-perinfo">
 										<div class="team-sign">
@@ -207,7 +207,7 @@
 								</div>
 								<div class="team-info">
 									<h5 class="team-job-title">Parceiro</h5>
-									<h2 class="team-title">João S. Dos Santos Caholo</h2>
+									<h2 class="team-title">João Caholo</h2>
 									<p>Here’s the story of a man named Brady who was busy with three boys of his own, climb leg rub face on everything give attitude nap all day for under the bed. </p>
 									<div class="team-perinfo">
 										<div class="team-sign">
