--- a/sobrenos.html
+++ b/sobrenos.html
@@ -182,7 +182,7 @@
 								<div class="team-info">
 									<h5 class="team-job-title">Parceiro</h5>
 									<h2 class="team-title">Idalécio Brás</h2>
-									<p>Here’s the story of a man named Brady who was busy with three boys of his own, climb leg rub face on everything give attitude nap all day for under the bed. </p>
+									<p>Designer UX/UI</p>
 									<div class="team-perinfo">
 										<div class="team-sign">
 											<img src="images/sign.png" alt=""/>
@@ -208,7 +208,7 @@
 								<div class="team-info">
 									<h5 class="team-job-title">Parceiro</h5>
 									<h2 class="team-title">João Caholo</h2>
-									<p>Here’s the story of a man named Brady who was busy with three boys of his own, climb leg rub face on everything give attitude nap all day for under the bed. </p>
+									<p>Programador Full Stack</p>
 									<div class="team-perinfo">
 										<div class="team-sign">
 											<img src="images/Jc.png" alt=""/>
@@ -234,7 +234,7 @@
 								<div class="team-info">
 									<h5 class="team-job-title">Parceiro</h5>
 									<h2 class="team-title">Josemar Antonio</h2>
-									<p>Here’s the story of a man named Brady who was busy with three boys of his own, climb leg rub face on everything give attitude nap all day for under the bed. </p>
+									<p>Design de interior</p>
 									<div class="team-perinfo">
 										<div class="team-sign">
 											<img src="images/Ja.png" alt=""/>
