refactor alter. sobrenos

--- a/sobrenos.html
+++ b/sobrenos.html
@@ -259,15 +259,15 @@
 								</div>
 								<div class="team-info">
 									<h5 class="team-job-title">Parceiro</h5>
-									<h2 class="team-title">Bruno Silva</h2>
-									<p>Here’s the story of a man named Brady who was busy with three boys of his own, climb leg rub face on everything give attitude nap all day for under the bed. </p>
+									<h2 class="team-title">Bruno Hamill</h2>
+									<p></p>
 									<div class="team-perinfo">
 										<div class="team-sign">
 											<img src="images/Bs.png" alt=""/>
 										</div>
 										<div class="team-profile">
 											<div class="name">
-												<h4>Economista</h4>
+												<h4>Comunicólogo e Economista</h4>
 												<ul>
 													<li><a href="https://www.facebook.com/profile.php?id=100001996084061&mibextid=LQQJ4d"><i class="fa fa-facebook"></i></a></li>
 													<li><a href="https://www.instagram.com/idaleciobras?igsh=bjZsbWVyamkwYzJ0&utm_source=qr"><i class="fa fa-instagram"></i></a></li>
