refactor alter. sobrenos

--- a/sobrenos.html
+++ b/sobrenos.html
@@ -260,7 +260,7 @@
 								<div class="team-info">
 									<h5 class="team-job-title">Parceiro</h5>
 									<h2 class="team-title">Bruno Hamill</h2>
-									<p></p>
+									<p>Comunicólogo</p>
 									<div class="team-perinfo">
 										<div class="team-sign">
 											<img src="images/Bs.png" alt=""/>
@@ -286,7 +286,7 @@
 								<div class="team-info">
 									<h5 class="team-job-title">Parceiro</h5>
 									<h2 class="team-title">Etiandro Silva</h2>
-									<p>Here’s the story of a man named Brady who was busy with three boys of his own, climb leg rub face on everything give attitude nap all day for under the bed. </p>
+									<p>Engenheiro Civil</p>
 									<div class="team-perinfo">
 										<div class="team-sign">
 											<img src="images/Es.png" alt=""/>
@@ -312,7 +312,7 @@
 								<div class="team-info">
 									<h5 class="team-job-title">Parceiro</h5>
 									<h2 class="team-title">Gildo Rogério</h2>
-									<p>Here’s the story of a man named Brady who was busy with three boys of his own, climb leg rub face on everything give attitude nap all day for under the bed. </p>
+									<p>Relações publicas e Gestor Comercial</p>
 									<div class="team-perinfo">
 										<div class="team-sign">
 											<img src="images/Gr.png" alt=""/>
